# Nesish

./: .clang-format  .gitignore  LICENSE  README.md
base/: CMakeLists.txt  vcpkg.json
base/cmake/modules/: gen_dllexport_header.cmake  target_utils.cmake
base/include/nhbase/: filesystem.hpp  klass.hpp  path.hpp  vc_intrinsics.h  vc_intrinsics.hpp
base/public/nhbase/: api.h  compiler_traits.hpp  config.hpp  filesystem.hpp  path.hpp  time.hpp
base/src/: filesystem.cpp  filesystem_macos.cpp  filesystem_posix.cpp  filesystem_web.cpp  filesystem_windows.cpp  path.cpp  path_linux.cpp  path_macos.mm  path_private.hpp  path_web.cpp  path_windows.cpp  time.cpp
base/tests/: CMakeLists.txt  filesystem_test.cpp  path_test.cpp
core/: CMakeLists.txt  vcpkg.json
core/3rd/fmt/: CMakeLists.txt
core/cmake/modules/: target_utils.cmake
core/include/nesish/: nesish.h
core/public/nesish/: api.h  nesish.h
core/src/: assert.hpp  byte_utils.hpp  byteutils.h  compilerintrinsics.h  console.c  console.cpp  console.h  console.hpp  log.h  log.hpp  nesish.c  nesish.cpp  nhassert.h  spec.h  spec.hpp  types.cpp  types.h  types.hpp
core/src/apu/: apu.c  apu.cpp  apu.h  apu.hpp  apu_clock.hpp  apuclock.c  apuclock.h  divider.c  divider.h  divider.hpp  dmc.c  dmc.cpp  dmc.h  dmc.hpp  dmc_dma.cpp  dmc_dma.hpp  dmcdma.c  dmcdma.h  envelope.c  envelope.cpp  envelope.h  envelope.hpp  frame_counter.cpp  frame_counter.hpp  frmctr.c  frmctr.h  lenctr.c  lenctr.h  length_counter.cpp  length_counter.hpp  linctr.c  linctr.h  linear_counter.hpp  noise.c  noise.cpp  noise.h  noise.hpp  pulse.c  pulse.cpp  pulse.h  (+13 more)
core/src/cartridge/: cart.h  cartkind.h  cartloader.c  cartloader.h  cartridge.hpp  cartridge_loader.cpp  cartridge_loader.hpp  cartridge_type.hpp  ines.c  ines.cpp  ines.h  ines.hpp  inesromaccessor.c  inesromaccessor.h
core/src/cpu/: addr_mode.hpp  addrmode.h  cpu.c  cpu.cpp  cpu.h  cpu.hpp  instr_impl.cpp  instr_impl.hpp  instr_table.cpp  instrdesc.h  instrimpl.c  instrimpl.h  instrtable.c  instrtable.h
core/src/debug/: dbgflags.h  dbgoam.c  dbgoam.h  dbgpal.c  dbgpal.h  dbgpattbl.c  dbgpattbl.h  dbgspr.c  dbgspr.h  debug_flags.hpp  oam.hpp  palette.cpp  palette.hpp  pattern_table.cpp  pattern_table.hpp  sprite.cpp  sprite.hpp
core/src/memory/: mappable_memory.hpp  mappable_memory.inl  mapping_entry.cpp  mapping_entry.hpp  membase.c  membase.h  mementry.c  mementry.h  memory.cpp  memory.hpp  mmem.c  mmem.h  video_memory.cpp  video_memory.hpp  vmem.c  vmem.h
core/src/ppu/: color.h  color.hpp  frame_buffer.cpp  frame_buffer.hpp  frmbuf.c  frmbuf.h  oam_dma.cpp  oam_dma.hpp  oamdma.c  oamdma.h  palette.h  palette.hpp  palette_color.hpp  palette_default.cpp  palette_default.hpp  palettecolor.h  palettedef.c  palettedef.h  pipeline_accessor.cpp  pipeline_accessor.hpp  placcessor.c  placcessor.h  ppu.c  ppu.cpp  ppu.h  ppu.hpp  ppureg.h
core/tests/: CMakeLists.txt
shell/: .clang-format  .gitignore  CMakeLists.txt  vcpkg.json
shell/3rd/ImGuiFileBrowser/: CMakeLists.txt  ImGuiFileBrowser.cpp
shell/3rd/blip_buf/: CMakeLists.txt
shell/3rd/glad/: CMakeLists.txt  glad.c
shell/3rd/imgui/: CMakeLists.txt
shell/3rd/lua-5.1.5/: .gitignore  CMakeLists.txt
shell/3rd/mINI/: CMakeLists.txt
shell/3rd/sokol/: CMakeLists.txt
shell/3rd/spdlog/: CMakeLists.txt
shell/cmake/modules/: rerun_watch.cmake  target_utils.cmake
shell/resources/config/: input_default.lua
shell/src/: app.cpp  app.hpp  controller.cpp  logger.cpp  logger.hpp  main.cpp
shell/src/audio/: backend.hpp  backend_rtaudio.cpp  backend_rtaudio.hpp  backend_sokol.cpp  backend_sokol.hpp  channel.hpp  channel.inl  device.cpp  device.hpp  pcm_writer.cpp  pcm_writer.hpp  resampler.cpp  resampler.hpp
shell/src/gui/: application.cpp  application.hpp  custom_key.cpp  custom_key.hpp  debugger_window.cpp  debugger_window.hpp  emulator_window.cpp  emulator_window.hpp  imgui_utils.hpp  messager.cpp  messager.hpp  platform_window.cpp  platform_window.hpp  ppu_debugger.cpp  ppu_debugger.hpp  rect_cut.cpp  rect_cut.hpp  window.hpp
shell/src/input/: controller.cpp  controller.hpp
shell/src/misc/: config.cpp  config.hpp  exception.hpp  glfunc.hpp  logger.cpp  logger.hpp  web_utils.cpp  web_utils.hpp
shell/src/rendering/: error.cpp  error.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
shell/template/: shell_minimal.html
src/: CMakeLists.txt  main.cpp  vcpkg.json
src/CMake/Modules/: gen_dllexport_header.cmake  shader.hpp.in  xform_shader.cmake
src/app/sfml/: CMakeLists.txt  sf_app.cpp  sf_app.hpp  sf_controller.cpp  sf_controller.hpp
src/cartridge/: cartridge.hpp  cartridge_loader.cpp  cartridge_loader.hpp  cartridge_type.hpp  ines.cpp  ines.hpp
src/common/: CMakeLists.txt  compiler_traits.hpp  error.hpp  filesystem.cpp  filesystem.hpp  filesystem_macos.cpp  filesystem_windows.cpp  hash.hpp  klass.hpp  logger.cpp  logger.hpp  path.cpp  path.hpp  path_macos.mm  path_private.hpp  path_windows.cpp  time.cpp  time.hpp  vc_intrinsics.hpp
src/common/tests/: filesystem_test.cpp
src/console/: CMakeLists.txt  assert.hpp  byte_utils.hpp  clock.cpp  clock.hpp  cpu.cpp  cpu.hpp  emulator.cpp  emulator.hpp  memory.cpp  memory.hpp  mmu.cpp  mmu.hpp  spec.hpp  types.cpp  types.hpp
src/console/apu/: apu.cpp  apu.hpp  apu_clock.cpp  apu_clock.hpp  divider.cpp  divider.hpp  dmc.cpp  dmc.hpp  dmc_dma.cpp  dmc_dma.hpp  envelope.cpp  envelope.hpp  frame_counter.cpp  frame_counter.hpp  length_counter.cpp  length_counter.hpp  linear_counter.cpp  linear_counter.hpp  noise.cpp  noise.hpp  pulse.cpp  pulse.hpp  sequencer.cpp  sequencer.hpp  sweep.cpp  sweep.hpp  triangle.cpp  triangle.hpp
src/console/cartridge/: cartridge.hpp  cartridge_loader.cpp  cartridge_loader.hpp  cartridge_type.hpp  ines.cpp  ines.hpp
src/console/cpu/: addr_mode.hpp  address_mode_map.cpp  address_mode_parse.cpp  address_mode_parse.hpp  cpu.cpp  cpu.hpp  instr_impl.cpp  instr_impl.hpp  instr_map.cpp  (+6 more)
src/glfw_app/: .gitignore  CMakeLists.txt  app.cpp  app.hpp  controller.cpp  controller.hpp
src/tests/: CMakeLists.txt
(+189 files in other folders)
